client adjust part II

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             />
           </h2>
           <p class="fund-info__text">
-            Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich: Europa
-            inwestująca w obszary wiejskie
+            "Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich: Europa
+            inwestująca w obszary wiejskie"
           </p>
           <p class="fund-info__text">
             Operacja pn.: "Dom pod Wierzbą - wypoczynek z Nordic Walking i
@@ -470,6 +470,7 @@
             </ul>
           </section>
           <section class="footer__section">
+            <p><i class="fas fa-map-marker-alt" style="font-size: 2em; padding-bottom: 10px;"></i></p>
             <p class="footer__contact__text">
               DOM POD WIERZBĄ<br />
               ul. Główna 34 Brzezinki<br />
