--- a/lgd-dobra-widawa.html
+++ b/lgd-dobra-widawa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LGD Dobra Widawa</title>
 
-       <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/9eaa68d1c9.js"
@@ -55,7 +55,8 @@
         <a
           class="top-header__link top-header__link--mail"
           href="mailto:joannaszypula1@gmail.com"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i
+          >joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -65,7 +66,7 @@
       </header>
 
       <header class="site-header palegreen">
-          <div class="site-header__logo">
+        <div class="site-header__logo">
           <a href="index.html">
             <picture>
               <source
@@ -85,7 +86,7 @@
           </a>
         </div>
 
-           <nav class="mainmenu" role="navigation">
+        <nav class="mainmenu" role="navigation">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"
             ><span class="navicon"></span
@@ -100,14 +101,14 @@
               <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Nordic <br/>Walking</a
+                    >Nordic <br />Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia <br/>holistyczna</a
+                    >Terapia <br />holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -135,15 +136,14 @@
         </nav>
       </header>
 
-      <section class="site-content">
-        <section class="subpage">
+      <section class="site-content subpage--on-white">
+        <section class="subpage subpage--on-white">
           <article class="subpage-article">
             <header class="subpage-article__header">
               <h1 class="subpage-article__heading">
                 Lokalna Grupa Działania "Dobra Widawa"
               </h1>
             </header>
-            <div class="emptyspace20"></div>
 
             <div class="subpage-article__page subpage-article__page--style1">
               <img
@@ -160,11 +160,11 @@
               </p>
               <p>
                 Firma Marzena Krajzel Dom Pod Wierzbą zrealizowała projekt w
-                zakresie rozwijania działalności gospodarczej dzięki wsparciu Lokalnej Grupy Działania Dobra
-                Widawa, w ramach poddziałania 19.2 „Wsparcie na wdrażanie
-                operacji w ramach strategii rozwoju lokalnego kierowanego przez
-                społeczność” objętego Programem Rozwoju Obszarów Wiejskich na
-                lata 2014-2020.
+                zakresie rozwijania działalności gospodarczej dzięki wsparciu
+                Lokalnej Grupy Działania Dobra Widawa, w ramach poddziałania
+                19.2 „Wsparcie na wdrażanie operacji w ramach strategii rozwoju
+                lokalnego kierowanego przez społeczność” objętego Programem
+                Rozwoju Obszarów Wiejskich na lata 2014-2020.
               </p>
               <p class="subpage-article__text--intro bold">
                 Lokalna Grupa Działania Dobra Widawa – wspieramy mieszkańców
@@ -173,7 +173,7 @@
                 wiejskich - projektów kulturalnych, społecznych, inwestycyjnych.
               </p>
 
-              <div class="emptyspace80"></div>
+              <div class="emptyspace20"></div>
 
               <img
                 class="subpage-article__image--right"
@@ -190,16 +190,121 @@
                 należących do 4 powiatów – oleśnickiego, wrocławskiego,
                 oławskiego oraz namysłowskiego.
               </p>
+
+              <p>
+                Celem LGD jest łączenie rozproszonych dotąd działań mieszkańców,
+                stymulowanie ich pomysłowości i aktywności związanej z
+                działaniem na rzecz obszaru gmin członkowskich oraz pozyskiwanie
+                środków finansowych na realizację celów zapisanych w Lokalnej
+                Strategii Rozwoju tego obszaru. Na podstawie podpisanej z
+                Zarządem Województwa Dolnośląskiego Umowy o warunkach i sposobie
+                realizacji strategii rozwoju lokalnego kierowanego przez
+                społeczność, LGD Dobra Widawa prowadzi nabory wniosków o
+                przyznanie pomocy w ramach Programu Rozwoju Obszarów Wiejskich i
+                rozdysponowuje środki na następujące działania na swoim
+                obszarze:
+              </p>
+              <ul>
+                <li>
+                  premie na start w wysokości 100 000,00 zł na stworzenie
+                  własnej firmy
+                </li>
+                <li>
+                  dotacje na rozwój firm w maksymalnej wysokości 300 000,00 zł
+                </li>
+
+                <li>
+                  dotacje na rozwój niekomercyjnej ogólnodostępnej
+                  infrastruktury turystycznej/rekreacyjnej/kulturalnej, w ramach
+                  których zagospodarowana zostaje przestrzeń publiczna, taka jak
+                  place zabaw, boiska wielofunkcyjne, siłownie zewnętrzne, mała
+                  architektura, szlaki turystyczne (rowerowe, kajakowe, konne)
+                  czy nasadzenia roślinności
+                </li>
+
+                <li>
+                  dotacje w wysokości do 50 000,00 zł na realizacje projektów
+                  grantowych przez lokalnych działaczy i organizacje pozarządowe
+                  w zakresie aktywizacji społecznej, zachowania lokalnego
+                  dziedzictwa, rozwoju infrastruktury rekreacyjnej, ochrony
+                  zabytków
+                </li>
+
+                <li>
+                  operacje własne i projekty współpracy w ramach których np.
+                  podejmowane są działania na rzecz promocji walorów naszego
+                  obszaru
+                </li>
+              </ul>
+              <p>&nbsp;</p>
+              <p>
+                Na wsparcie dla obszaru gmin Partnerstwa Dobra Widawa na okres
+                2014-2020 przeznaczonych zostało 17 050 000 zł.
+              </p>
+              <p>&nbsp;</p>
+
+              <p class="subpage-article__text--intro">
+                <strong>Lokalna Grupa Działania Dobra Widawa</strong><br />
+                ul. Wojska Polskiego 67/69<br />
+                56-400 Oleśnica<br />
+              </p>
+
+              <p>&nbsp;</p>
+              <p>
+                <a class="link-brown footer__contact-link" href="tel:713143201"
+                  ><i class="fas fa-phone-alt">&nbsp;</i>71 314 32 01</a
+                >
+              </p>
+              <p>
+                <a
+                  class="link-brown footer__contact-link--mail"
+                  href="mailto:biuro@dobrawidawa.pl"
+                  ><i class="far fa-envelope">&nbsp;</i>biuro@dobrawidawa.pl</a
+                >
+              </p>
+              <p>&nbsp;</p>
+              <p class="p-xlarge">
+                <a class="link-yellow" href="http://www.dobrawidawa.pl/"
+                  >www.dobrawidawa.pl</a
+                >
+              </p>
+
+              <p>&nbsp;</p>
+
+              <p>
+                <span style="font-size: 48px; color: #4267B2;"
+                  ><i class="fab fa-facebook-square"></i
+                ></span>
+
+                <a
+                  class="link-brown footer__contact-link"
+                  href="https://www.facebook.com/DobraWidawa"
+                  target="_blank"
+                >
+                  &nbsp;&nbsp;Lokalna Grupa Działania Dobra Widawa – „Oficjalny
+                  Profil”</a
+                >
+              </p>
             </div>
 
             <div class="emptyspace80"></div>
-            <div class="emptyspace80"></div>
+            <div class="center">
+              <img
+                class="fund-info__image"
+                src="images/logotypy-UE-finansowanie.jpg"
+                alt="Finansowanie projektu"
+              />
+              <p>&nbsp;</p>
+              <p class="fund-info__text">
+                "Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich:
+                Europa inwestująca w obszary wiejskie"
+              </p>
+            </div>
           </article>
         </section>
       </section>
 
       <footer class="footer">
-          <footer class="footer">
         <div class="footer__4-col">
           <section class="footer__section off-on-mob">
             <img
@@ -241,6 +346,7 @@
             </ul>
           </section>
           <section class="footer__section">
+              <p><i class="fas fa-map-marker-alt" style="font-size: 2em; padding-bottom: 10px;"></i></p>
             <p class="footer__contact__text">
               DOM POD WIERZBĄ<br />
               ul. Główna 34 Brzezinki<br />
