--- a/nordic-walking.html
+++ b/nordic-walking.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wypoczynek z Nordic Walking - Dom Pod Wierzbą</title>
 
-       <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/9eaa68d1c9.js"
@@ -55,7 +55,8 @@
         <a
           class="top-header__link top-header__link--mail"
           href="mailto:joannaszypula1@gmail.com"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i
+          >joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -65,7 +66,7 @@
       </header>
 
       <header class="site-header palegreen">
-         <div class="site-header__logo">
+        <div class="site-header__logo">
           <a href="index.html">
             <picture>
               <source
@@ -85,8 +86,7 @@
           </a>
         </div>
 
-       
-           <nav class="mainmenu" role="navigation">
+        <nav class="mainmenu" role="navigation">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"
             ><span class="navicon"></span
@@ -101,14 +101,14 @@
               <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Nordic <br/>Walking</a
+                    >Nordic <br />Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia <br/>holistyczna</a
+                    >Terapia <br />holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -282,8 +282,7 @@
         </section>
       </section>
 
-    <footer class="footer">
-          <footer class="footer">
+      <footer class="footer">
         <div class="footer__4-col">
           <section class="footer__section off-on-mob">
             <img
@@ -325,6 +324,7 @@
             </ul>
           </section>
           <section class="footer__section">
+              <p><i class="fas fa-map-marker-alt" style="font-size: 2em; padding-bottom: 10px;"></i></p>
             <p class="footer__contact__text">
               DOM POD WIERZBĄ<br />
               ul. Główna 34 Brzezinki<br />
@@ -345,7 +345,7 @@
               >
             </p>
           </section>
-        <section class="footer__section">
+          <section class="footer__section">
             <p class="footer__social">
               <a
                 class="footer__contact-link"
