--- a/warsztaty.html
+++ b/warsztaty.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Warsztaty - Dom Pod Wierzbą</title>
 
-       <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/9eaa68d1c9.js"
@@ -55,7 +55,8 @@
         <a
           class="top-header__link top-header__link--mail"
           href="mailto:joannaszypula1@gmail.com"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i
+          >joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -65,7 +66,7 @@
       </header>
 
       <header class="site-header palegreen">
-         <div class="site-header__logo">
+        <div class="site-header__logo">
           <a href="index.html">
             <picture>
               <source
@@ -85,8 +86,7 @@
           </a>
         </div>
 
-    
-           <nav class="mainmenu" role="navigation">
+        <nav class="mainmenu" role="navigation">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"
             ><span class="navicon"></span
@@ -101,14 +101,14 @@
               <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Nordic <br/>Walking</a
+                    >Nordic <br />Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia <br/>holistyczna</a
+                    >Terapia <br />holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -178,9 +178,10 @@
             </div>
 
             <div class="emptyspace40"></div>
-            
 
-            <div class="subpage-article__page subpage-article__page--style2 grid-4-col">
+            <div
+              class="subpage-article__page subpage-article__page--style2 grid-4-col"
+            >
               <section class="subpage-card">
                 <img
                   class="subpage-card__image"
@@ -248,123 +249,32 @@
             <div class="emptyspace20"></div>
 
             <div class="subpage-article__page subpage-article__page--style1">
-            <p class="subpage-article__text">
-              Napisz do nas, lub zadzwoń, jeśli chcesz zorganizować warsztat w
-              Domu pod Wierzbą lub jesteś zainteresowana udziałem w jakimś
-              warsztacie:
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <a
-                class="contact__link--alt"
-                href="mailto:joannaszypula1@gmail.com"
-                >joannaszypula1@gmail.com</a
-              >
-            </p>
-            <p>
-              <a
-                class="contact__link--alt contact__link--expose"
-                href="tel:+48730700277"
-                >+48 730 700 277</a
-              >
-            </p>
+              <p class="subpage-article__text">
+                Napisz do nas, lub zadzwoń, jeśli chcesz zorganizować warsztat w
+                Domu pod Wierzbą lub jesteś zainteresowana udziałem w jakimś
+                warsztacie:
+              </p>
+              <p>&nbsp;</p>
+              <p>
+                <a
+                  class="contact__link--alt"
+                  href="mailto:joannaszypula1@gmail.com"
+                  >joannaszypula1@gmail.com</a
+                >
+              </p>
+              <p>
+                <a
+                  class="contact__link--alt contact__link--expose"
+                  href="tel:+48730700277"
+                  >+48 730 700 277</a
+                >
+              </p>
             </div>
-
           </article>
-        </section>
-
-        <section class="offer">
-          <a href="nordic-walking.html">
-            <article class="offer-article">
-              <header class="offer-article__header">
-                <img
-                  class="offer-article__thumb"
-                  src="images/oferta-glowna-nordic-walking.jpg"
-                  alt="Nordic Walking w Domu Pod Wierzbą"
-                />
-                <h2 class="offer-article__heading">
-                  Wypoczynek z Nordic Walking
-                </h2>
-              </header>
-              <p class="offer-article__text">
-                Wypoczynek z Nordic Walking i Fizjoterapią to projekt, który
-                powstał spontanicznie, ponieważ gospodarze domu kochają Nordic
-                Walking i obydwoje są terapeutami i trenerami rozwoju
-                osobistego. Poczuli, że przyszedł czas zaprezentować ten rodzaj
-                wypoczynku szerszemu gronu odbiorców...
-              </p>
-              <button class="offer-article__button">więcej >></button>
-            </article>
-          </a>
-
-          <a href="warsztaty.html">
-            <article class="offer-article">
-              <header class="offer-article__header">
-                <img
-                  class="offer-article__thumb"
-                  src="images/o-domu-grupa-warsztatowa-dom-pod-wierzba.jpg"
-                  alt="Warsztaty w domu pod Wierzbą"
-                />
-                <h2 class="offer-article__heading">Warsztaty</h2>
-              </header>
-              <p class="offer-article__text">
-                Dom pod Wierzbą jest idealnym miejscem do przeprowadzania
-                kameralnych kilkudniowych warsztatów. Dobrze się u nas czują
-                grupy kilkunastoosobowe. Dom jest nowoczesny, bardzo wygodny i
-                przestronny. Został wybudowany w taki sposób, żeby chronić
-                środowisko naturalne. Stojąc tuż przy lesie, daje gościom stałe
-                uczucie połączenia z naturą, doświadczenie głębokiej ciszy i
-                spokoju...
-              </p>
-              <button class="offer-article__button">więcej >></button>
-            </article>
-          </a>
-
-          <a href="akupunktura.php">
-            <article class="offer-article">
-              <header class="offer-article__header">
-                <img
-                  class="offer-article__thumb"
-                  src="images/oferta-glowna-nordic-walking.jpg"
-                  alt="Nordic Walking w Domu Pod Wierzbą"
-                />
-                <h2 class="offer-article__heading">Terapia holistyczna</h2>
-              </header>
-              <p class="offer-article__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                porro iste excepturi! Voluptate numquam quasi veritatis
-                similique distinctio iure optio minima autem est, corporis ab
-                laudantium excepturi possimus quam deleniti!
-              </p>
-              <button class="offer-article__button">więcej >></button>
-            </article>
-          </a>
-
-          <a href="akupunktura.php">
-            <article class="offer-article">
-              <header class="offer-article__header">
-                <img
-                  class="offer-article__thumb"
-                  src="images/oferta-glowna-akupunktura.jpg"
-                  alt="Akupunktura w Domu Pod Wierzbą"
-                />
-                <h2 class="offer-article__heading">Akupunktura</h2>
-              </header>
-
-              <p class="offer-article__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-                porro iste excepturi! Voluptate numquam quasi veritatis
-                similique distinctio iure optio minima autem est, corporis ab
-                laudantium excepturi possimus quam deleniti!
-              </p>
-              <button class="offer-article__button">więcej >></button>
-            </article>
-          </a>
         </section>
       </section>
 
-  <footer class="footer">
-          <footer class="footer">
+      <footer class="footer">
         <div class="footer__4-col">
           <section class="footer__section off-on-mob">
             <img
@@ -406,6 +316,7 @@
             </ul>
           </section>
           <section class="footer__section">
+              <p><i class="fas fa-map-marker-alt" style="font-size: 2em; padding-bottom: 10px;"></i></p>
             <p class="footer__contact__text">
               DOM POD WIERZBĄ<br />
               ul. Główna 34 Brzezinki<br />
@@ -426,7 +337,7 @@
               >
             </p>
           </section>
-        <section class="footer__section">
+          <section class="footer__section">
             <p class="footer__social">
               <a
                 class="footer__contact-link"
