--- a/terapia-holistyczna.html
+++ b/terapia-holistyczna.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terapia holistyczna - Dom Pod Wierzbą</title>
 
-       <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/9eaa68d1c9.js"
@@ -55,7 +55,8 @@
         <a
           class="top-header__link top-header__link--mail"
           href="mailto:joannaszypula1@gmail.com"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i
+          >joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -65,7 +66,7 @@
       </header>
 
       <header class="site-header palegreen">
-         <div class="site-header__logo">
+        <div class="site-header__logo">
           <a href="index.html">
             <picture>
               <source
@@ -85,8 +86,7 @@
           </a>
         </div>
 
-       
-           <nav class="mainmenu" role="navigation">
+        <nav class="mainmenu" role="navigation">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"
             ><span class="navicon"></span
@@ -101,14 +101,14 @@
               <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Nordic <br/>Walking</a
+                    >Nordic <br />Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia <br/>holistyczna</a
+                    >Terapia <br />holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -151,23 +151,24 @@
             </p>
 
             <h2 class="subpage-article__heading2">
-             Joanna Szypuła POZYTYWNIE :-)
+              Joanna Szypuła POZYTYWNIE :-)
             </h2>
-            <p class="subpage-article__text"><em>
-              Certyfikowana konsultantka psychoterapii pozytywnej, certyfikowana
-              terapeutka ustawień systemowych w polu archetypów (inaczej
-              ustawienia hellingerowskie), certyfikowana coach i facylitatorka
-              programów rozwojowych dla ludzi z udziałem koni trenerów, koniara
-              :)</em>
+            <p class="subpage-article__text">
+              <em>
+                Certyfikowana konsultantka psychoterapii pozytywnej,
+                certyfikowana terapeutka ustawień systemowych w polu archetypów
+                (inaczej ustawienia hellingerowskie), certyfikowana coach i
+                facylitatorka programów rozwojowych dla ludzi z udziałem koni
+                trenerów, koniara :)</em
+              >
             </p>
 
             <div>
-            <img
-              class="subpage-article__image--right round5px one-third"
-              src="images/Joanna-Szypula-terapeutka-holistyczna.jpg"
-              alt="Joanna Szypuła"
-            />
-            
+              <img
+                class="subpage-article__image--right round5px one-third"
+                src="images/Joanna-Szypula-terapeutka-holistyczna.jpg"
+                alt="Joanna Szypuła"
+              />
             </div>
 
             <p class="subpage-article__text">
@@ -194,9 +195,7 @@
               komunikatory.
             </p>
 
-            <h2 class="subpage-article__heading2">
-              POMAGAM...
-            </h2>
+            <h2 class="subpage-article__heading2">POMAGAM...</h2>
 
             <ul>
               <li>pokonać życiowe trudności</li>
@@ -211,9 +210,7 @@
               <li>uzyskać harmonię we wszystkich obszarach życia</li>
             </ul>
 
-            <h2 class="subpage-article__heading2">
-              NARZĘDZIA I SPOSOBY PRACY
-            </h2>
+            <h2 class="subpage-article__heading2">NARZĘDZIA I SPOSOBY PRACY</h2>
             <p>
               Posiadam wieloletnie doświadczenie jako terapeutka i osoba
               prowadząca grupy i warsztaty. Chociaż zdobywam wykształcenie
@@ -234,9 +231,7 @@
               <a href="https://www.herosteps.eu/o_nas/">www.herosteps.eu</a>
             </p>
 
-            <h2 class="subpage-article__heading2">
-              WYKSZTAŁCENIE
-            </h2>
+            <h2 class="subpage-article__heading2">WYKSZTAŁCENIE</h2>
             <p>
               Ukończyłam Szkołę Coachów Stowarzyszenia CEL, Szkołę Terapii
               Ustawień Systemowych w Polu Archetypów Anny Rataj i Szkołę
@@ -252,9 +247,7 @@
             </p>
 
             <div class="emptyspace20 off-on-mob"></div>
-            <h2 class="subpage-article__heading2">
-              GDZIE SIĘ SPOTKAMY? :)
-            </h2>
+            <h2 class="subpage-article__heading2">GDZIE SIĘ SPOTKAMY? :)</h2>
             <p>
               Sesje odbywają się w Domu Pod Wierzbą (ul. Główna 34, 55-220
               Brzezinki), we Wrocławiu przy ul. Hallera 3/4 lub
@@ -282,8 +275,7 @@
         </section>
       </section>
 
-    <footer class="footer">
-          <footer class="footer">
+      <footer class="footer">
         <div class="footer__4-col">
           <section class="footer__section off-on-mob">
             <img
@@ -325,6 +317,7 @@
             </ul>
           </section>
           <section class="footer__section">
+              <p><i class="fas fa-map-marker-alt" style="font-size: 2em; padding-bottom: 10px;"></i></p>
             <p class="footer__contact__text">
               DOM POD WIERZBĄ<br />
               ul. Główna 34 Brzezinki<br />
@@ -345,7 +338,7 @@
               >
             </p>
           </section>
-        <section class="footer__section">
+          <section class="footer__section">
             <p class="footer__social">
               <a
                 class="footer__contact-link"
